--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
             <div class="reviewsContainer">
 
-              <picture class="socialProof__reviewStars">
+              <div class="socialProof__reviewStars">
                 <img src="images/icon-star.svg" alt="Star icon" class="socialProof__reviewStars">
                 <img src="images/icon-star.svg" alt="Star icon" class="socialProof__reviewStars">
                 <img src="images/icon-star.svg" alt="Star icon" class="socialProof__reviewStars">
                 <img src="images/icon-star.svg" alt="Star icon" class="socialProof__reviewStars">
                 <img src="images/icon-star.svg" alt="Star icon" class="socialProof__reviewStars">
-              </picture>
+              </div>
   
               <p class="sicualProof__reviewText">Rated 5 Stars in Reviews</p>
 
@@ -59,13 +59,13 @@
           <div class="socialProof__review2 reviews">
 
             <div class="reviewsContainer">
-              <picture class="socialProof__reviewStars">
+              <div class="socialProof__reviewStars">
                 <img src="images/icon-star.svg" alt="Star icon">
                 <img src="images/icon-star.svg" alt="Star icon" class="socialProof__reviewStars">
                 <img src="images/icon-star.svg" alt="Star icon" class="socialProof__reviewStars">
                 <img src="images/icon-star.svg" alt="Star icon" class="socialProof__reviewStars">
                 <img src="images/icon-star.svg" alt="Star icon" class="socialProof__reviewStars">
-              </picture>
+              </div>
               
               <p class="sicualProof__reviewText">Rated 5 Stars in Report Guru</p>
 
@@ -79,13 +79,13 @@
 
             <div class="reviewsContainer">
 
-              <picture class="socialProof__reviewStars">
+              <div class="socialProof__reviewStars">
                 <img src="images/icon-star.svg" alt="Star icon">
                 <img src="images/icon-star.svg" alt="Star icon" class="socialProof__reviewStars">
                 <img src="images/icon-star.svg" alt="Star icon" class="socialProof__reviewStars">
                 <img src="images/icon-star.svg" alt="Star icon" class="socialProof__reviewStars">
                 <img src="images/icon-star.svg" alt="Star icon" class="socialProof__reviewStars">
-              </picture>
+              </div>
               
               <p class="sicualProof__reviewText">Rated 5 Stars in BestTech</p>
             </div>
